--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <!-- Slide Menu-->
-  
+<script src="./node_modules/event-source-polyfill/src/eventsource.min.js"></script>
   <div class="root__container" >
       <!-- Main Content -->
   
