--- a/frontend/src/app/cause-details/cause-details.component.css
+++ b/frontend/src/app/cause-details/cause-details.component.css
@@ -1,43 +1,15 @@
-.prod-teasers {
-    display: flex;
-    width: 24.25%;
-    margin-right: 1%;
+
+body {
+    min-width: 320px;
+    background: #fff;
+    font-family: roboto regular,sans-serif;
+    line-height: 1.3;
+    color: #ddec98;
+    font: 15px/1.5 Arial, Helvetica,sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
-  
-  /* Global */
-  .container {
-    width: 80%;
-    margin: auto;
-    overflow: hidden;
-  }
-.prod-teaser-title {
-    overflow: hidden;
-    height: 59px;
-    margin-top: 5px;
-    font-family: roboto medium,sans-serif;
-    font-size: 18px;
-}
-h6 {
-    display: block;
-    /* font-size: 0.67em; */
-    margin-block-start: 2.33em;
-    margin-block-end: 2.33em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-}
-span ul, ol {
-    margin-top: 0;
-    margin-bottom: 10px;
-    display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-}
 .btn {
         height: 39px;
         padding: 7px 40px 5px;
@@ -78,112 +50,59 @@ span ul, ol {
         transition: all .2s linear;
 }
 
-.prod-teaser {
-    display: block;
-    margin-bottom: 20px;
-    text-align: center;
+.btn:hover, .btn:active {
+    color: #fff;
+    background-color: #1e0cbd;
 }
-*, *:before, *:after {
-    /* padding: 0; */
-    margin: 0;
-    outline: 0;
-    box-sizing: border-box;
+.btn:active {
+    font-weight: bold;
 }
-.prod-teaser-content {
+
+/* Global */
+.container {
+    width: 80%;
+    margin: 50px  auto;
     position: relative;
-    padding: 5px 10px 10px;
+    padding: 15px 20px;
     border: 2px solid #d8d8d8;
-    border-top: none;
+    border-radius: 15px;
+    /* border-top: none; */
     color: #383838;
+    overflow: hidden;
 }
 
-span li {
-   display: block;
-   float: left;
-   width: 300px; 
-   padding: 5px; 
-}
-
-body {
-    min-width: 320px;
-    background: #fff;
-    font-family: roboto regular,sans-serif;
-    line-height: 1.3;
-    color: #ddec98;
-    font: 15px/1.5 Arial, Helvetica,sans-serif;
-    padding: 0;
-    margin: 0;
-}
-header nav {
-    float: right;
-    margin-top: 1px;
-  }
-  
-header .highlight, header button {
-    color: #7ff76f;
-    font-weight: bold;
-    margin: 20px;
-}
-#main-section h1 {
-    margin-top: 10px;
-    font-size: 55px;
-    margin-bottom: 10px;
-  }
-  
-  #main-section p {
-    font-size: 20px;
-  }
-
-header button:hover {
-    color: #80c3d8;
-    font-weight: bold;
-}
-
-.prod-teaser {
-    display: block;
-    margin-bottom: 20px;
+.prod-teaser-content {
+    margin: 3em auto;
     text-align: center;
+    line-height: 1.5em;
 }
-.menu-entry {
-    display: inline-block
+
+.prod-teaser-content > img{
+    margin: 0 auto;
 }
-.top-menu {
-    width: 100%;
-    padding-left: 0;
-    list-style-type: none;
+
+.prod-content-title {
+    font-weight: bold;
+    line-height: 2em;
+}
+
+.prod-content-desc,
+.prod-content-date,
+.prod-content-location {
+    line-height: 1.5em;
+}
+
+.add-comment input, .add-comment .btn{
     display: inline-block;
-    margin: 0;
-    font-weight: 400;
-    max-height: 55px;
-    line-height: 55px;
-    vertical-align: top;
-    font-style: normal;
-    font-size: 16px;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-family: "Roboto", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    
 }
-.comment-input {
+
+.add-comment .comment-input {
     margin: 5px;
     padding: 5px;
+    max-width: 60%;
 }
-header li {
-    display: inline;
-    padding: 0 20px 0 20px;
+
+.add-comment .btn {
+    max-width: 30%;
 }
-  
-header #branding {
-    float: left;
-} 
-  
-header #branding h1 {
-    margin: 0;
-}
-  header {
-    background: #84e9ec;
-    color: #ffffff;
-    padding-top: 30px;
-    min-height: 70px;
-    border-bottom: #6cd890 3px solid;
-}
-  
