--- a/frontend/src/app/cause-details/cause-details.component.html
+++ b/frontend/src/app/cause-details/cause-details.component.html
@@ -1,27 +1,26 @@
 <div class="container">
         <section id="main-section">
-          <div class="container">
-              <li class="prod-teaser">
-                <div class="prod-teaser-content">
-                  <img [src]="getImage(cause?.photoPath)" width="270" height="246"/>
-                  <h6 class="prod-teaser-content-title">Name: {{ cause?.name }}</h6>
-                  <h6 class="prod-teaser-content-title">Description: {{ cause?.description }}</h6>
-                  <h6 class="prod-teaser-content-title">Date: {{ cause?.time }}</h6>
-                  <h6 class="prod-teaser-content-title">Location: {{ cause?.location }}</h6>
-                  <div>
-                      <button type="button" class="btn colors-btn" (click)="attendToCause()"> <fa-icon icon="hand-holding-heart"></fa-icon> Attend </button>
+                  <div class="prod-teaser-content">
+                    <img [src]="getImage(cause?.photoPath)" width="270" height="246"/>
+                    <h3 class="prod-content-title">{{ cause?.name }}</h3>
+                    <h4 class="prod-content-desc">{{ cause?.description }}</h4>
+                    <h4 class="prod-content-date">Кога: {{ cause?.time }}</h4>
+                    <h4 class="prod-content-location">Къде: {{ cause?.location }}</h4>
+                    <div>
+                        <button type="button" class="btn colors-btn" (click)="attendToCause()"> <fa-icon icon="hand-holding-heart"></fa-icon> Attend </button>
+                    </div>
                   </div>
+                  
                   <div>
                       <ol>
                           <span *ngFor="let comment of alreadyMadeComments">
                             <tr> {{ comment.content }}</tr>
                           </span>
-                          <input class="comment-input" type="text" [(ngModel)]="comment" placeholder="Add Comment..."/>
-                          <button class="btn" (click)="addComment()">Comment</button>
+                          <div class="add-comment">
+                            <input class="comment-input form-control" type="text" [(ngModel)]="comment" placeholder="Add Comment..."/>
+                            <button class="btn" (click)="addComment()">Comment</button>
+                          </div>
                       </ol>
                   </div>
-                </div>
-              </li>
-          </div>
         </section>
       </div>
