--- a/frontend/src/app/causes/causes.component.html
+++ b/frontend/src/app/causes/causes.component.html
@@ -16,7 +16,7 @@
               <fa-icon icon="users-cog"></fa-icon> Profile
             </button></li>
           <li><button (click)="recommend()">
-              <fa-icon icon="power-off"></fa-icon> Recomended For Me
+              <fa-icon icon="star"></fa-icon> Recomended For Me
             </button>
           </li>
           <li><button (click)="logout()" [routerLink]="['/login']">
@@ -35,10 +35,11 @@
           <li class="prod-teaser">
             <div class="prod-teaser-content">
               <img [src]="getImage(entry.photoPath)" width="270" height="246"/>
-              <h6 class="prod-teaser-content-title">Name: {{ entry.name }}</h6>
-              <h6 class="prod-teaser-content-title">Date: {{ entry.time * 1000 | date:'yyyy-MM-dd HH:mm:ss Z'}}</h6>
-              <h6 class="prod-teaser-content-title">Location: {{ entry.location }}</h6>
+              <h6 class="prod-teaser-content-title">{{ entry.name }}</h6>
+              <h6 class="prod-teaser-content-title"><fa-icon icon="calendar-alt"></fa-icon> {{ entry.time * 1000 | date:'yyyy-MM-dd'}}</h6>
+              <h6 class="prod-teaser-content-title"> <fa-icon icon="map-marked-alt"></fa-icon>  {{ entry.location }}</h6>
               <h6 class="prod-teaser-content-title">Attendance: {{ entry.participantIds?.length }}</h6>
+              <h6 class="prod-teaser-content-title">Comments: {{ entry.commentIds?.length }}</h6>
               <div>
                   <button type="button" class="btn colors-btn" (click)="attendToCause(entry)"> <fa-icon icon="hand-holding-heart"></fa-icon> Attend </button>
               </div>
