--- a/frontend/src/app/cause-details/cause-details.component.css
+++ b/frontend/src/app/cause-details/cause-details.component.css
@@ -106,3 +106,26 @@ body {
 .add-comment .btn {
     max-width: 30%;
 }
+
+ul {
+  padding-left: 80px;
+  list-style: none;
+}
+li {
+    background: #fff;
+    border-radius: 2px;
+    box-shadow: 0 1px 2px rgba(#000, .1);
+    position: relative;
+    margin-top: 20px;
+}
+
+header{
+    border-bottom: 1px solid #e5e5e5;
+    font-size: 0;
+}
+h1 {
+    padding: 10px 20px;
+    font-size: 14px;
+    font-weight: 500;
+    display: inline-block;
+}
