--- a/frontend/src/app/causes/causes.component.html
+++ b/frontend/src/app/causes/causes.component.html
@@ -9,6 +9,9 @@
       </div>
       <nav>
         <ul>
+          <li><button type="button" (click)="goToLogs()">
+            <fa-icon icon="plus-circle"></fa-icon> Взаимодействия
+          </button></li>
           <li><button type="button" [routerLink]="['/cause']">
               <fa-icon icon="plus-circle"></fa-icon> Създай нова кауза
             </button></li>
@@ -36,7 +39,7 @@
             <div class="prod-teaser-content">
               <img [src]="getImage(entry)" width="270" height="246"/>
               <h6 class="prod-teaser-content-title">{{ entry.name }}</h6>
-              <h6 class="prod-teaser-content-title"><fa-icon icon="calendar-alt"></fa-icon> {{ entry.time * 1000 | date:'yyyy-MM-dd'}}</h6>
+              <h6 class="prod-teaser-content-title"><fa-icon icon="calendar-alt"></fa-icon> {{ entry.time * 1000 | date:'dd-MM-yyyy'}}</h6>
               <h6 class="prod-teaser-content-title"> <fa-icon icon="map-marked-alt"></fa-icon>  {{ entry.location }}</h6>
               <h6 class="prod-teaser-content-title">Участници: {{ entry.participantIds?.length }}</h6>
               <h6 class="prod-teaser-content-title">Коментари: {{ entry.commentIds?.length }}</h6>
