Add styles and default images

--- a/frontend/src/app/cause-details/cause-details.component.css
+++ b/frontend/src/app/cause-details/cause-details.component.css
@@ -48,6 +48,7 @@ body {
         text-transform: uppercase;
         text-align: center;
         transition: all .2s linear;
+        border-radius: 20px 20px;
 }
 
 .btn:hover, .btn:active {
@@ -60,7 +61,7 @@ body {
 
 /* Global */
 .container {
-    width: 80%;
+    width: 50%;
     margin: 50px  auto;
     position: relative;
     padding: 15px 20px;
@@ -98,9 +99,10 @@ body {
 }
 
 .add-comment .comment-input {
-    margin: 5px;
-    padding: 5px;
+    margin: 10px;
+    padding: 10px;
     max-width: 60%;
+    border-radius:  10px;
 }
 
 .add-comment .btn {
@@ -124,8 +126,28 @@ header{
     font-size: 0;
 }
 h1 {
-    padding: 10px 20px;
+    padding: 10px 10px;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 100;
     display: inline-block;
+    
+}
+
+.owner {
+    font-weight: bold;
+    color: black;
+}
+
+.comment {
+    background-color: rgb(245, 240, 240);
+    border-radius: 15px;
+    padding: 5px;
+}
+
+.content {
+    color: black;
+}
+
+.comment-avatar {
+    border-radius: 360%;
 }
