--- a/frontend/src/app/change-password/change-password.component.css
+++ b/frontend/src/app/change-password/change-password.component.css
@@ -41,7 +41,7 @@ body {
     font-weight: 600;
     line-height: 20px;
     color: #586069;
-    background-color: #f3f5f8;
+    background-color: #b4cef5;
     border-bottom: 1px solid #e1e4e8;
 }
 .menu-heading:first-child {
