--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -29,3 +29,5 @@
         </div>
     </form>
 </div>
+<div class="quote">Не чакай, включи се!</div>
+<div class="quote">Достатъчна е една малка светлина, за да разсее хиляди сенки!</div>
