--- a/frontend/src/app/causes/causes.component.css
+++ b/frontend/src/app/causes/causes.component.css
@@ -18,7 +18,7 @@
     font-family: roboto medium,sans-serif;
     font-size: 18px;
 }
-h6 {
+h5 {
     display: block;
     /* font-size: 0.67em; */
     margin-block-start: 2.33em;
@@ -125,6 +125,9 @@ header .highlight, header button {
     color: #00008B;
     font-weight: bold;
     margin: 20px;
+}
+.highlight {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 #main-section h1 {
     margin-top: 10px;
