--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -7,7 +7,7 @@
                 [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
             <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
                 <div *ngIf="f.username.errors.required">
-                    <font color="red">Username is required</font>
+                    <font color="red">Потребителското име е задължително</font>
                 </div>
             </div>
         </div>
@@ -17,7 +17,7 @@
                 [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
             <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                 <div *ngIf="f.password.errors.required">
-                    <font color="red">Password is required</font>
+                    <font color="red">Паролата е задължителна</font>
                 </div>
             </div>
         </div>
